Closed Bug 1743533 Opened 4 years ago Closed 4 years ago

iframes that span multiple pages don't draw in print preview with fission

Categories

(Core :: Panning and Zooming, defect, P2)

defect

Tracking

()

VERIFIED FIXED
96 Branch
Fission Milestone Future
Tracking Status
firefox-esr91 --- disabled
firefox94 --- wontfix
firefox95 --- wontfix
firefox96 --- verified

People

(Reporter: tnikkel, Assigned: tnikkel)

References

(Regression)

Details

(Keywords: regression)

Attachments

(4 files)

Attached file tif.html

Load the attached testcase with fission enabled, print preview, scroll. The iframe contents don't draw. I bisected this to a regression from bug 1650183.

Note that webrender changes to the spatial tree since then cause us to crash on this testcase, bug 1743152 has a fix for that. But after that fix we will still have the not drawing bug here.

Just reverting bug 1650183 doesn't fix this bug totally. You have to scroll and then the iframe contents are drawn. So perhaps some other changes affect this as well.

Fission Milestone: --- → ?

GetTopLevelViewportVisibleRectInSelfCoords seems reasonable. I think maybe the problem lies with the unique display list structure that we have with printing (when layout.display-list.improve-fragmentation=true, which it is) as described in bug 1743152, comment 11.

Hmm, I wonder if what's happening is that each of the display remote display items send a visibility update to the child process to tell it what part of it is visible, and each one reports a different part is visible. If that's not this bug then it definitely seems like a bug.

Yep, that does seem to be affecting this bug.

Unioning the visible rects of all effectsinfo updates that come in during one paint seems to fix the bug here. Seems like a reasonable fix.

Assignee: nobody → tnikkel
Status: NEW → ASSIGNED

Depends on D132789

Severity: -- → S2
Priority: -- → P2

Rendering in Blink, WebKit and Gecko with normal settings.

Pushed by tnikkel@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/1aa49c616960 Handle the visible rect of oop iframes that span multiple pages in print documents. r=botond https://hg.mozilla.org/integration/autoland/rev/7adf6ba80da3 Add test. r=botond,hiro

(In reply to Karl Dubost💡 :karlcow from comment #8)

Created attachment 9253780 [details]
edge canary, Safari Tech Preview, Firefox Nightly

Rendering in Blink, WebKit and Gecko with normal settings.

Did you enable fission? The testcase crashes for me on nightly with fission enabled. Bug 1743152 should fix the crash, but it's only on autoland so far.

Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 96 Branch
Fission Milestone: ? → Future
QA Whiteboard: [qa-96b-p2]

Reproduced the issue with Firefox 96.0a1 (20211129215324) on Windows 10x64 while having fission.autostart:true and loading the attached test case. Print preview does not render and firefox flashes when loading the test case.
The issue is fixed with Firefox 96.0 (20220106144528) on Windows 10x64, macOS 10.15 and Ubuntu 20.04. The attached test case is properly rendered inside print preview while having fission.autostart:true.

However when printing the test case with Firefox 96.0 using the Microsoft Print to PDF option while having print.tab_modal.enabled:false on Windows 10x64 results in a pdf that does not have the pages drawn. Screen recording: here. Should we file a new issue for this regarding the fact that bug 1702501 landed and this only happens with the old modal and fission enabled? Thank you in advance.

Flags: needinfo?(tnikkel)

Looks like that code has been removed and was already disabled. No point in filing a bug about that.

Flags: needinfo?(tnikkel)

(In reply to Timothy Nikkel (:tnikkel) from comment #13)

Looks like that code has been removed and was already disabled. No point in filing a bug about that.

Thank you! Closing this based on the above comments.

Status: RESOLVED → VERIFIED
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: